# camlhmp

./: .flake8  .gitignore  .gitpod.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  catalog.json  environment.yaml  environment.yml  justfile  llms.txt  mkdocs.yml  pyproject.toml  versions.json
.claude/: settings.json
.claude/hooks/: catalog-reminder.py
.github/: gen-ref-pages.py  releases.yml
.github/workflows/: build-docs.yml  releases.yml
camlhmp/: __init__.py  framework.py  utils.py
camlhmp/cli/: blast.py  blast_region.py  camlhmp.py  extract.py
camlhmp/engines/: blast.py
camlhmp/parsers/: blast.py
camlhmp/visuals/: framework.py
docs/: CHANGELOG.md  about.md  available-tools.md  index.md  installation.md  schema.md
docs/api/: engines.md  framework.md  index.md  utils.md
docs/cli/: camlhmp-blast-alleles.md  camlhmp-blast-regions.md  camlhmp-blast-targets.md  camlhmp-extract.md  index.md
paper/: paper.bib  paper.md
tests/data/: sccmec-i.fasta  sccmec-ii.fasta  sccmec-iii.fasta  sccmec-multiple.fasta  sccmec-partial.fasta  sccmec-partial.yaml
v0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.1/CHANGELOG/: index.html
v0.3.1/about/: index.html
v0.3.1/api/: index.html
v0.3.1/available-tools/: index.html
v0.3.1/cli/: index.html
v0.3.1/installation/: index.html
v0.3.1/schema/: index.html
v0.3.1/search/: search_index.json
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.0/CHANGELOG/: index.html
v1.0.0/about/: index.html
v1.0.0/api/: index.html
v1.0.0/available-tools/: index.html
v1.0.0/cli/: index.html
v1.0.0/installation/: index.html
v1.0.0/schema/: index.html
v1.0.0/search/: search_index.json
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.1/CHANGELOG/: index.html
v1.0.1/about/: index.html
v1.0.1/api/: index.html
v1.0.1/available-tools/: index.html
v1.0.1/cli/: index.html
v1.0.1/installation/: index.html
v1.1.0/: 404.html  index.html  sitemap.xml
v1.1.2/: 404.html  index.html  sitemap.xml
v1.1.3/: 404.html  index.html  sitemap.xml
v1.1.4/: 404.html  index.html  objects.inv  sitemap.xml
(+134 files in other folders)
